--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.12.2",
+    "lenis": "^1.3.3",
     "lucide-react": "^0.508.0",
     "next": "15.3.1",
     "react": "^19.0.0",
